<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>GroupID</groupId>
  <artifactId>ArtifactID</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  <name>testJenkins</name>
<properties>
                <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
                <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
                <java.version>11</java.version>
                <maven.compiler.source>${java.version}</maven.compiler.source>
                <maven.compiler.target>${java.version}</maven.compiler.target>
                <junit-platform.version>5.7.0</junit-platform.version>
                <maven.compiler.source>1.8</maven.compiler.source>
    			<maven.compiler.target>1.8</maven.compiler.target>
        </properties>
<dependencies>
                <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-api</artifactId>
                        <version>5.7.0</version>
                        <scope>test</scope>
                </dependency>
                <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>5.7.0</version>
                        <scope>test</scope>
                </dependency>
</dependencies>

<!--Puis arguments pour le build par Jenkins et le lancement des tests : -->
    <build>
	<sourceDirectory>src</sourceDirectory>
	<testSourceDirectory>test</testSourceDirectory>
        <pluginManagement>
                <plugins>
                        <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-compiler-plugin</artifactId>
                                <version>3.8.1</version>
                        </plugin>
                        <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-surefire-plugin</artifactId>        
                                <version>3.0.0-M3</version>
                                <configuration>
                                        <testFailureIgnore>
                                                        true
                                        </testFailureIgnore>
                                        <argLine>
                                                        --illegal-access=permit
                                        </argLine>
                        </configuration>
                        </plugin>
                        <plugin>
                                <groupId>org.apache.maven.plugins</groupId>
                                <artifactId>maven-failsafe-plugin</artifactId>
                                <version>3.0.0-M3</version>
                                <configuration>
                                        <argLine>
                                                        --illegal-access=permit
                                        </argLine>
                                </configuration>
                        </plugin>
                </plugins>
        </pluginManagement>
        </build>
        
</project>